--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -81,7 +81,7 @@ linters:
         - gofumpt
         - goheader
         - goimports
-        # - gomoddirectives // ignore
+        - gomoddirectives
         - gomodguard
         - goprintffuncname
         - gosec
